<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <ImageView
            android:id="@+id/imageViewGnu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="GNU Software Logo"
            android:src="@drawable/gnu_logo" />

        <TextView
            android:id="@+id/lic_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/license_header"
            android:textColor="#000000"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/lic_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:padding="15dp"
            android:text="@string/license_github_link"
            android:textColor="#000000"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/lic_legal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:padding="15dp"
            android:text="@string/license_legal"
            android:textColor="#000000"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/lic_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:padding="15dp"
            android:text="@string/license_footer"
            android:textColor="#000000"
            android:textSize="12dp" />
    </LinearLayout>
</ScrollView>