<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp" >

	<LinearLayout
        android:id="@+id/linear_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
		    <TextView
		        android:layout_weight="1"
		        android:id="@+id/peak_range"
		        android:layout_width="wrap_content"
		        android:layout_height="45dp"
		        android:gravity="center"
		        android:maxLines="1"
		        android:paddingRight="10dp"
                android:text="Range"
		        android:textColor="#000000"
		        android:textSize="20dp"
		        android:textStyle="bold" />
		
		    <Spinner
		        android:layout_weight="1"
		        android:id="@+id/ranges_spinner"
		        android:layout_width="wrap_content"
		        android:layout_height="45dp"
		        android:background="@android:drawable/btn_dropdown"
		        android:prompt="@string/range"
		        android:spinnerMode="dropdown" />
	</LinearLayout>

	<LinearLayout
        android:id="@+id/linear_peak"
        android:layout_below="@id/linear_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	   <TextView
	       	android:layout_weight="1"
	        android:id="@+id/peak_name"
	        android:layout_width="wrap_content"
	        android:layout_height="45dp"
	        android:gravity="center"
	        android:maxLines="1"
	        android:paddingRight="10dp"
	        android:text="@string/peak"
	        android:textColor="#000000"
	        android:textSize="20dp"
	        android:textStyle="bold" />
	
	    <Spinner
	        android:layout_weight="1"
	        android:id="@+id/peak_spinner"
	        android:layout_width="wrap_content"
	        android:layout_height="45dp"
	        android:background="@android:drawable/btn_dropdown"
	        android:prompt="@string/peak"
	        android:spinnerMode="dropdown" />
	</LinearLayout>
	
	<LinearLayout
        android:id="@+id/linear_date"
        android:layout_below="@id/linear_peak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	
		<Button 
		    android:layout_weight="1"
		    android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
            android:text="Pick date" 
	    	android:onClick="showDatePickerDialog" />
		
		<TextView
	       	android:layout_weight="1"
	        android:id="@+id/date"
	        android:layout_width="wrap_content"
	        android:layout_height="45dp"
	        android:gravity="center"
	        android:maxLines="1"
	        android:paddingRight="10dp"
                android:text="Not set"
	        android:textColor="#000000"
	        android:textSize="20dp"
	        android:textStyle="bold" />
		
	</LinearLayout>
	
	<LinearLayout
        android:id="@+id/linear_start_time"
        android:layout_below="@id/linear_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	
		<Button 
		    android:layout_weight="1"
		    android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
            android:text="Pick start time" 
	    	android:onClick="showStartTimePickerDialog" />
		
		<TextView
	       	android:layout_weight="1"
	        android:id="@+id/start_time"
	        android:layout_width="wrap_content"
	        android:layout_height="45dp"
	        android:gravity="center"
	        android:maxLines="1"
	        android:paddingRight="10dp"
                android:text="Not set"
	        android:textColor="#000000"
	        android:textSize="20dp"
	        android:textStyle="bold" />
		
	</LinearLayout>
	
	<LinearLayout
        android:id="@+id/linear_end_time"
        android:layout_below="@id/linear_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	
		<Button 
		    android:layout_weight="1"
		    android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
            android:text="Pick end time" 
	    	android:onClick="showEndTimePickerDialog" />
		
		<TextView
	       	android:layout_weight="1"
	        android:id="@+id/end_time"
	        android:layout_width="wrap_content"
	        android:layout_height="45dp"
	        android:gravity="center"
	        android:maxLines="1"
	        android:paddingRight="10dp"
                android:text="Not set"
	        android:textColor="#000000"
	        android:textSize="20dp"
	        android:textStyle="bold" />
		
	</LinearLayout>
	

	
<!--     <DatePicker
        android:id="@+id/datePicker1"
        android:calendarViewShown="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_peak" />
    
    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/datePicker1" /> -->
		
	<EditText
		android:id="@+id/notes"
		android:layout_below="@id/linear_end_time"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:hint="Add notes here..."
		android:ems="10">
    </EditText>
    
    <Button
        android:id="@+id/get_proof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/notes"
        android:onClick="sendGetProofIntent"
        android:text="Proof" />
    
   <LinearLayout
        android:id="@+id/linearLayoutProof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_proof"
        android:orientation="horizontal" >
        <ImageView 
	        android:id="@+id/image_proof"
	        android:layout_width="wrap_content"
	        android:layout_height="150dp"
	        android:layout_weight="0"
	        android:gravity="top"	        
            android:contentDescription="@string/app_name"
	        />
    </LinearLayout>
    
    
    
	<LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:onClick="cancelAddPeak"
            android:text="Cancel" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:onClick="addAddPeak"
            android:text="Add" />
    </LinearLayout>



</RelativeLayout>